header edits and login button

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About us</h1>
-<p>This is my new About page!</p>
+<div class="jumbotron center">
+	<h1>About us</h1>
+	<p>This is my new About page!</p>
+</div>
