--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to my app!</h1>
-<p>Sign up <%= link_to "here", "http://www.google.com" %>.</p>
+<div class="jumbotron center">
+	<h1>Welcome to my app!</h1>
+	<p>Click here to 
+		<%= link_to "Sign Up", "http://www.google.com", class: "btn btn-primary btn-lg" %> or 
+		<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+	</p>
+	
+</div>
