--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <div class="jumbotron center">
 	<h1>Welcome to my app!</h1>
+	<% if user_signed_in? %>
+		<p>Welcome to Pinteresting! Content soon to come!</p>
+	<% else %>
 	<p>Click here to 
-		<%= link_to "Sign Up", "http://www.google.com", class: "btn btn-primary btn-lg" %> or 
-		<%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %> or 
+		<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
 	</p>
-	
+	<% end %>
 </div>
